# Noche

./: .gitignore  CMakeLists.txt  bomb.h  jam.h  main.cpp  noche.h
application/: application.cpp  application.h  imgui_layer.cpp  imgui_layer.h  layer.h  layer_stack.cpp  layer_stack.h  window.h  windows_window.cpp  windows_window.h
asset/: asset.h  asset_manager.cpp  asset_manager.h  file_system.cpp  file_system.h
common/: alias.h  delegate.h  meta.h  platform.h  property.h  reflection.h  static_constructor.h
core/: meta.h  reflection.h  type_alias.h
debug/: log.cpp  log.h
editor/: editor_event.h  editor_window.h  imgui_layer.cpp  imgui_layer.h  layer.h
entry/: application.cpp  application.h  platform.h  window.cpp  window.h
event/: event.h  key_event.h  mouse_event.h  window_event.h
io/: asset.h  asset_manager.cpp  asset_manager.h  file_system.cpp  file_system.h  yaml_serializer.cpp  yaml_serializer.h
object/: guid.cpp  guid.h  object.cpp  object.h
reflection/: compile_time_reflection.h  reflection.h  reflection.hpp
render/: glfw_window.cpp  glfw_window.h  window.cpp  window.h
script/lua/: lua_state.cpp  lua_state.h
std/: alias.h  meta.h  reflection.h  type_alias.h
